--- a/examples/week1/textstyletags.html
+++ b/examples/week1/textstyletags.html
@@ -6,6 +6,8 @@
   <body>
     <h1>This is an example of text styling.</h1>
     <p>This is an example of a p tag.</p>
+    <p>This is an example of a p tag.</p>
+    <p>This is an example of a p tag.</p>
     <p>This is an <b>example</b> of a p tag.</p>
     <p>This is an <i>example</i> of a p tag.</p>
     <p>This is an example of a p tag with <br> a line break in it.</p>
