--- a/assignments/Assignments3.html
+++ b/assignments/Assignments3.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <a href="#Myfirstheading">go to my first tag</a>
+    <a href="#Mysecondheading">go to my second tag</a>
+    <a href="#Mythirdheading">go to my third tag</a>
     <h1>This is a heading in assignment 3</h1>
     <p>
       Elit ab litteris ab quis qui iis incididunt sed cernantur.
@@ -25,7 +27,7 @@
       tamen senserit, summis est doctrina ne duis qui ut multos
       quem ita quibusdam.
     </p>
-    <h2 id="Myfirstheading">This is a h2 tag</h2>
+    <h2 id="Mysecondheading">This is a h2 tag</h2>
     <p>
       Nostrud ea sint vidisse, litteris sunt eiusmod proident e
       culpa id qui fugiat vidisse qui sint se fabulas aut dolor.
@@ -46,9 +48,9 @@
       dolor ita expetendis comprehenderit, id an fore dolore
       tempor. Laborum est tempor.
     </p>
-    <h3 id="Myfirstheading">This is a h2 tag</h2>
+    <h3 id="Mythirdheading">This is a h2 tag</h2>
     <p>
-      
+
       Iis summis velit ita cupidatat nam illum hic cernantur id
       amet admodum iudicem id e dolore cernantur, irure
       tractavissent ullamco dolor mentitum, proident despicationes
