--- a/examples/week2/Day07_divlayout.html
+++ b/examples/week2/Day07_divlayout.html
@@ -2,12 +2,12 @@
 <html lang="en-US">
   <head>
     <title>semantic Layout Example</title>
-    <style>
+  <style>
       #header,
       #nav,
       #main,
-      #footer  {
-      </header>
+      #footer  {}
+      </style>
   </head>
   <body>
   <div id="header">
