--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en-US">
   <head>
     <title>HELLO WORLD</title>
+    <link href="css/navBar.css" rel="stylesheet">
+
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Gallery.html">Gallery</a></li>
+        <li><a href="About_me.html">About Me</a></li>
+      </ul>
+    </nav>
     <h1>This is a basic "Hello World" template for an HTML file.</h1>
   </body>
 </html>
