--- a/examples/Day14_responsiveflexbox.html
+++ b/examples/Day14_responsiveflexbox.html
@@ -29,7 +29,7 @@
       </style>
   </head>
   <body>
-    <h1>Responsive Flezbox example</h1>
+    <h1>Responsive Flexbox example</h1>
   </header>
   <nav>
     <div class="importantLink">Important Link 1</div>
