--- a/Final_Project_Checkpoint/Checkpoint2.html
+++ b/Final_Project_Checkpoint/Checkpoint2.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Portfolio</title>
-    <link href="css/navBar.css" rel="stylesheet">
+    <link href="../css/navBar.css" rel="stylesheet">
 
   </head>
   <body>
@@ -10,7 +10,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Gallery.html">Gallery</a></li>
-        <li><a href="About_me.html">About Me</a></li>
+        <li><a href="../About_me.html">About Me</a></li>
       </ul>
     </nav>
     <h1>Portfolio</h1>
