--- a/examples/week3/floats.html
+++ b/examples/week3/floats.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>HELLO WORLD</title>
+    <title>Float and clear Examples</title>
     <style>
       #bougiedog  {
         width: 150px;
         float: right;
-        opacity: 50%;
+
       }
       #Spookydog  {
         width: 150px;
@@ -14,14 +14,19 @@
         opacity: 50%;
       }
       p {
-        background-color: purple;
-        clear: both
-      }
+        background-color: pink; {
+        }
+        .box {
+          height: 100px;
+          width: 10px;
+          border: 1px solid black;
+          background-color: rgba(0,0,255,0.5);
+
+        }
     </style>
   </head>
   <body>
     <img id="bougiedog" src="../../images/bougie_dog.jpeg">
-    <img id="Spookydog" src="../../images/spooky_dog.jpeg">
     <p>
       Litteris magna eiusmod nam nisi quamquam despicationes,
       ipsum fabulas non praetermissum iis vidisse ne tempor.
