Fix broken assignments link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
       <Ol>
         <li><a href="#">HOME</a></li>
-        <li><a href="#">SCHOOL ASSIGNMENTS</a></li>
+        <li><a href="Assignments/Assignment.html">SCHOOL ASSIGNMENTS</a></li>
         <li><a href="About_me.html">ABOUT ME</a></li>
       </Ol>
     </nav>
