--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -9,7 +9,9 @@
     <nav>
       <Ol>
         <li><a href="Assignment6/index.html">Assignment6</a></li>
-        <li><a href="Assignment8/index.html">Assignment8</a></li>
+        <li><a href="Assignment8/CSS/index.html">Assignment8</a></li>
+        <li><a href="Assignment9/Assignment9.html">Assignment9</a></li>
+        <li><a href="CodeSkeleton/Assets/index.html">CodeSkeleton</a></li>
         <li><a href="About_me.html">ABOUT ME</a></li>
       </Ol>
     </nav>
