Code Skeleton+ commit

--- a/Assignments/CodeSkeleton/Assets/index.html
+++ b/Assignments/CodeSkeleton/Assets/index.html
@@ -2,12 +2,30 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>CODE SKELETON ASSIGMNENT</title>
-    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <h1>HELLO WORLD.</h1>
-    <p>PARAGRAPH</p>
-    <h1> HEADING #2</h1>
+
+        <h1>HEADER</h1>
+        <p>This is a basic
+        <b>HTML webpage</b> that I made in order to show my understanding of the lesson plan, and
+        <i>class assignment.</i></p>
+
+        <h2>HEADER</h2>
+        <p>This is a basic <a href="#">HTML webpage</a>  that I made in order to show my understanding of the lesson plan, and class assignment.
+        </p>
+        
+       <h3>HEADER<h3>
+        <p>This is a basic HTML webpage that I made in order to show my understanding of the lesson plan, and class assignment.
+        </p>
+
+
+
+    <ul id="nav-list">
+        <li><a href="#">Home<a/></li>
+        <li><a href="#">Home<a/></li>
+        <li><a href="#">Home<a/></li>
+    </ul>
   </body>
 </html>
