--- a/Assignments/Assignment6/index.html
+++ b/Assignments/Assignment6/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -9,7 +10,7 @@
       }*/
 
       ol{
-        background-color:3F88C5;
+        background-color: 3F88C5;
         padding: 30px;
         padding-bottom: 70;
       }
@@ -36,7 +37,7 @@
 
       </style>
       <link rel="stylesheet" href="style.css">
-      <a href="#"><a/>
+      <a href="#"></a>
   </head>
   <body>
 
