Div only layout

--- a/Assignments/CodeSkeleton/Assets/index.html
+++ b/Assignments/CodeSkeleton/Assets/index.html
@@ -15,17 +15,17 @@
         <h2>HEADER</h2>
         <p>This is a basic <a href="#">HTML webpage</a>  that I made in order to show my understanding of the lesson plan, and class assignment.
         </p>
-        
+
        <h3>HEADER<h3>
         <p>This is a basic HTML webpage that I made in order to show my understanding of the lesson plan, and class assignment.
         </p>
 
 
-
-    <ul id="nav-list">
+        <nav>
+        <ul id="nav-list">
         <li><a href="#">Home<a/></li>
         <li><a href="#">Home<a/></li>
         <li><a href="#">Home<a/></li>
-    </ul>
+        </nav>
   </body>
 </html>
