--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -9,6 +9,7 @@
     <nav>
       <Ol>
         <li><a href="Assignment6/index.html">Assignment6</a></li>
+        <li><a href="Assignment7/index.html">Assignment7</a></li>
         <li><a href="Assignment8/CSS/index.html">Assignment8</a></li>
         <li><a href="Assignment9/Assignment9.html">Assignment9</a></li>
         <li><a href="CodeSkeleton/Assets/index.html">CodeSkeleton</a></li>
