--- a/Assignments/Assignment9/Assignment9.html
+++ b/Assignments/Assignment9/Assignment9.html
@@ -48,11 +48,39 @@
       .numberBox {
         background-color: lightgreen;
       }
+      .clearBox{
+
+      }
 
       /* Your CSS to complete the assignment goes here */
-      #task1Block{
+      #task1Block {
         float: left;
       }
+      #task2Block {
+        float: right;
+      }
+      #task3Block1 {
+        float:right;
+      }
+      #task3Block2 {
+        float: left;
+      }
+      .letterBox{
+        float: left;
+      }
+      .numberBox{
+        float: right;
+      }
+      .clearBox{
+        clear: both
+      }
+      .task5P{
+        float: left;
+        width: 33%;
+      }
+
+
+
 
     </style>
   </head>
@@ -70,7 +98,7 @@
         se consequat, ne magna probant constias iis commodo fugiat
         do doctrina exercitation, minim proident appellat, ubi id
         elit cupidatat, ea te praesentibus.Amet expetendis qui
-        consequat. Nam aut philosophari, summis efflorescere laborum
+        consequat. Nam aut philosophSari, summis efflorescere laborum
         amet laboris, irure arbitror e proident, appellat sunt
         cupidatat, mentitum praesentibus quo aliquip, nostrud velit
         pariatur pariatur, nulla expetendis laborum ita a ubi minim
@@ -78,7 +106,7 @@
         Ab sint sint e expetendis id malis ut incurreret.
       </p>
       <h2>Task 2 - Text and Floats (Right)</h2>
-      <h3>Make the blue block below float left.</h3>
+      <h3>Make the blue block below float right.</h3>
       <div id="task2Block" class="blueBlock">FLOAT RIGHT</div>
       <p>
         Fore admodum incididunt qui cernantur si arbitror, ubi
@@ -140,6 +168,7 @@
       <div id="task4Block3" class="box numberBox">3</div>
       <div id="task4Block4" class="box numberBox">4</div>
       <div id="task4Block5" class="box numberBox">5</div>
+      </div>
     </div>
     <div class="column">
       <h2>Task 5 - Floats and Layouts</h2>
