Finished Assignment 10 + updated

--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -12,7 +12,7 @@
         <li><a href="Assignment7/index.html">Assignment7</a></li>
         <li><a href="Assignment8/CSS/index.html">Assignment8</a></li>
         <li><a href="Assignment9/Assignment9.html">Assignment9</a></li>
-        <li><a href="Assignment10/index.html">Assignment10</a></li>
+        <li><a href="Assignment10/Assignment10.html">Assignment10</a></li>
         <li><a href="CodeSkeleton/Assets/index.html">CodeSkeleton</a></li>
         <li><a href="About_me.html">ABOUT ME</a></li>
       </Ol>
