Misspelled error fixed

--- a/Assignments/Assignment10/Assignment10.html
+++ b/Assignments/Assignment10/Assignment10.html
@@ -32,14 +32,14 @@
           <th>Name</th>
         </tr>
         <tr>
-          <td>Choclate</td>
+          <td>Chocolate</td>
           <td>7</td>
           <td>Rocky Road</td>
         </tr>
         <tr>
-          <td>Straberry</td>
+          <td>Strawberry</td>
           <td>8</td>
-          <td>Straberry Cheesecake</td>
+          <td>Strawberry Cheesecake</td>
         </tr>
         <tr>
           <td>Pistcahio</td>
