Updated with 108 Assignment 1

--- a/108_Assignment1_Navbar/Index.html
+++ b/108_Assignment1_Navbar/Index.html
@@ -13,9 +13,11 @@
         <li><a href="#">Contact</a></li>
         <ul>
      </nav>
-     <h1><p>Write a paragraph explanation on why the padding only seems to be applying to some sides of the element, and not others
-     </p><h1>
-     <p>  Inline elements the bottom Padding and the top padding are usally ignored.</p>
+     <h2><p>Write a paragraph explanation on why the padding only seems to be
+            applying to some sides of the element, and not others</p>
+    </h2>
+     <p> For Inline elements the bottom padding and the top padding are usally ignored.That is why the padding only seems to be apllied in some elements and not others not.</p>
+
 
 
   </body>
