--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>SCHOOL ASSIGNMENTS</title>
+    <style>
+    ul {
+      background-color: Skyblue;
+    }
+    
+    </style>
   </head>
   <body>
     <h1>SCHOOL ASSIGNMENTS</h1>
@@ -15,6 +21,9 @@
         <li><a href="Assignment10/Assignment10.html">Assignment10</a></li>
         <li><a href="CodeSkeleton/Assets/index.html">CodeSkeleton</a></li>
         <li><a href="About_me.html">ABOUT ME</a></li>
+
+        <h2>108 ASSIGNMENTS</h2>
+        <ul><li><a href="../108_Assignment1_Navbar/index.html">Assignment 1</a></li><ul>
       </Ol>
     </nav>
   </body>
