--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -7,7 +7,7 @@
     ul {
       background-color: Skyblue;
     }
-    
+
     </style>
   </head>
   <body>
@@ -24,7 +24,9 @@
 
         <h2>108 ASSIGNMENTS</h2>
         <ul><li><a href="../108_Assignment1_Navbar/index.html">Assignment 1</a></li><ul>
+        <li><a href="../108_Assignment_2/index.html">Assignment 2</a></li>
       </Ol>
+
     </nav>
   </body>
 </html>
