--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -13,7 +13,7 @@
   <body>
     <h1>SCHOOL ASSIGNMENTS</h1>
     <nav>
-      <Ol>
+      <ol>
         <li><a href="Assignment6/index.html">Assignment6</a></li>
         <li><a href="Assignment7/index.html">Assignment7</a></li>
         <li><a href="Assignment8/CSS/index.html">Assignment8</a></li>
@@ -21,11 +21,21 @@
         <li><a href="Assignment10/Assignment10.html">Assignment10</a></li>
         <li><a href="CodeSkeleton/Assets/index.html">CodeSkeleton</a></li>
         <li><a href="About_me.html">ABOUT ME</a></li>
+      </ol>
 
         <h2>108 ASSIGNMENTS</h2>
-        <ul><li><a href="../108_Assignment1_Navbar/index.html">Assignment 1</a></li><ul>
-        <li><a href="../108_Assignment_2/index.html">Assignment 2</a></li>
-      </Ol>
+        <ul>
+          <li>
+            <a href="../108_Assignment1_Navbar/index.html">Assignment 1</a>
+          </li>
+          <li>
+            <a href="../108_Assignment_2/index.html">Assignment 2</a>
+          </li>
+          <li>
+            <a href="../108_Assignment_3/index.html">Assignment 3</a>
+          </li>
+      </ul>
+
 
     </nav>
   </body>
