--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -34,6 +34,10 @@
           <li>
             <a href="../108_Assignment_3/index.html">Assignment 3</a>
           </li>
+          <li>
+            <a href="../108_Assignment_4/index.html">Assignment 4</a>
+          </li>
+
       </ul>
 
 
