--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -29,6 +29,9 @@
             <a href="../108_Assignment1_Navbar/index.html">Assignment 1</a>
           </li>
           <li>
+            <a href="../108_Navbar_Lab/index.html">Navbar Lab 1</a>
+          </li>
+          <li>
             <a href="../108_Assignment_2/index.html">Assignment 2</a>
           </li>
           <li>
