--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -26,19 +26,19 @@
         <h2>108 ASSIGNMENTS</h2>
         <ul>
           <li>
-            <a href="../108_Assignment1_Navbar/index.html">Assignment 1</a>
+            <a href="../108_Assignment1_Navbar/Index.html">Assignment 1</a>
           </li>
           <li>
-            <a href="../108_Navbar_Lab/index.html">Navbar Lab 1</a>
+            <a href="../108_Navbar_Lab/Index.html">Navbar Lab 1</a>
           </li>
           <li>
-            <a href="../108_Assignment_2/index.html">Assignment 2</a>
+            <a href="../108_Assignment_2/Index.html">Assignment 2</a>
           </li>
           <li>
-            <a href="../108_Assignment_3/index.html">Assignment 3</a>
+            <a href="../108_Assignment_3/Index.html">Assignment 3</a>
           </li>
           <li>
-            <a href="../108_Assignment_4/index.html">Assignment 4</a>
+            <a href="../108_Assignment_4/Index.html">Assignment 4</a>
           </li>
 
       </ul>
