--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -40,6 +40,9 @@
           <li>
             <a href="../108_Assignment_4/index.html">Assignment 4</a>
           </li>
+          <li>
+            <a href="../108_Assignment_5/part1/index.html">Assignment 5</a>
+          </li>
 
       </ul>
 
