--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -43,7 +43,10 @@
           <li>
             <a href="../108_Assignment_5/part1/index.html">Assignment 5</a>
           </li>
-
+          <li>
+            <a href="../108_Assignment_6/part2/index.html">Assignment 6
+            </a>
+          </li>
       </ul>
 
 
