Fixed issues in Assignment 6

--- a/108_Assignment_6/part2/index.html
+++ b/108_Assignment_6/part2/index.html
@@ -39,8 +39,8 @@
           </p>
           <a>LEARN MORE</a>
         </div>
-    </section>
-    <section id="threeCards">
+      </section>
+
     <div class="card">
       <h3>Intresting stuff</h3>
       <p>
@@ -48,8 +48,7 @@
       </p>
       <a>LEARN MORE</a>
     </div>
-  </section>
-  <section id="threeCards">
+
   <div class="card">
     <h3>Intresting stuff</h3>
     <p>
@@ -58,7 +57,7 @@
     </p>
     <a>LEARN MORE</a>
   </div>
-  </section>
+
       <section id="gallery1"></section>
       <section id="twoCards"></section>
       <div class="card">
@@ -68,6 +67,8 @@
            sed do eiusmod tempor.
         </p>
         <a>LEARN MORE</a>
+      </div>
+
         <div class="card">
           <h3>Intresting stuff</h3>
           <p>
@@ -75,6 +76,8 @@
              sed do eiusmod tempor.
           </p>
           <a>LEARN MORE</a>
+        </div>
+        
       <footer>
         <ul class="socialMedia">
           <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
