--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -47,6 +47,10 @@
             <a href="../108_Assignment_6/part2/index.html">Assignment 6
             </a>
           </li>
+          <li>
+            <a href="../107_FinalEval/eval/index.html">Final Evaluation
+            </a>
+          </li>
       </ul>
 
 
