ROCK PAPER SCISSOR

--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -51,6 +51,10 @@
             <a href="../107_FinalEval/eval/index.html">Final Evaluation
             </a>
           </li>
+
+          <a href="../108_RPSLab/game_v1.html">ROCK PAPER SCISSOR LAB
+          </a>
+        </li>
       </ul>
 
 
