--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -55,6 +55,10 @@
           <a href="../108_RPSLab/game_v1.html">ROCK PAPER SCISSOR LAB
           </a>
         </li>
+
+        <a href="../108/108_Assignment22/index.html">Assignment22 - Bouncing Ball
+        </a>
+      </li>
       </ul>
 
 
