Issues with RPS Lab pt1 and pt2

--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -26,41 +26,17 @@
         <h2>108 ASSIGNMENTS</h2>
         <ul>
           <li>
-            <a href="../108_Assignment1_Navbar/index.html">Assignment 1</a>
-          </li>
-          <li>
-            <a href="../108_Navbar_Lab/index.html">Navbar Lab 1</a>
-          </li>
-          <li>
-            <a href="../108_Assignment_2/index.html">Assignment 2</a>
-          </li>
-          <li>
-            <a href="../108_Assignment_3/index.html">Assignment 3</a>
-          </li>
-          <li>
-            <a href="../108_Assignment_4/index.html">Assignment 4</a>
-          </li>
-          <li>
-            <a href="../108_Assignment_5/part1/index.html">Assignment 5</a>
-          </li>
-          <li>
-            <a href="../108_Assignment_6/part2/index.html">Assignment 6
+            <a href="../108_RPSLab/js/logic.js">
+              108_RPSLab_pt1
             </a>
-          </li>
-          <li>
-            <a href="../107_FinalEval/eval/index.html">Final Evaluation
+        </li>
+        <li>
+            <a href="../108/108_Assignment22/index.html">
+            Assignment22 - Bouncing Ball
             </a>
-          </li>
-
-          <a href="../108_RPSLab/game_v1.html">ROCK PAPER SCISSOR LAB
-          </a>
         </li>
 
-        <a href="../108/108_Assignment22/index.html">Assignment22 - Bouncing Ball
-        </a>
-      </li>
 
-      
       </ul>
     </nav>
   </body>
