Updated RPS 1 and 2

--- a/Assignments/Assignment.html
+++ b/Assignments/Assignment.html
@@ -26,7 +26,7 @@
         <h2>108 ASSIGNMENTS</h2>
         <ul>
           <li>
-            <a href="../108_RPSLab/js/logic.js">
+            <a href="../108_RPSLab/game_v1.html">
               108_RPSLab_pt1
             </a>
         </li>
@@ -35,6 +35,16 @@
             Assignment22 - Bouncing Ball
             </a>
         </li>
+        <li>
+          <a href="../108_RPSLab/game_v2.html">
+            108_RPSLab_pt2
+          </a>
+      </li>
+      <li>
+        <a href="../108_RPSLab/game_v2.html">
+          108_RPSLab_pt3
+        </a>
+    </li>
 
 
       </ul>
