--- a/108_RPSLab/game_v3.html
+++ b/108_RPSLab/game_v3.html
@@ -36,7 +36,7 @@
     </nav>
     <script src="js/logic.js"></script>
     <script type="text/javascript">
-      setUp();
+    function setUp()
     </script>
   </body>
 </html>
